2005-12-05	Jelmer Vernooij <jelmer@samba.org>

	* c2hs/gen/GenBind.hs: support mapping struct and union names to haskell
	types

	* c2hs/c/CTrav.hs: added `checkForOneCUName'

Fri Nov 25 10:54:56 EST 2005  Jelmer Vernooij <jelmer@samba.org>

	* add prettify functions for structs, enums and unions

2005-08-10  Manuel M T Chakravarty  <chak@cse.unsw.edu.au>

	* c2hs/gen/GBMonad.hs: apply `upcaseFirstLetter' and
	`downcaseFirstLetter' if specified

	* c2hs/chs/CHS.hs: added `upcaseFirstLetter' and `downcaseFirstLetter'

2005-08-09  Manuel M T Chakravarty  <chak@cse.unsw.edu.au>

	* c2hs/gen/CInfo.hs: exports `getPlatform'

2005-08-08  Manuel M T Chakravarty  <chak@cse.unsw.edu.au>

	* c2hs/toplevel/Main.hs: Added --platform switch for cross compilation

	* c2hs.cabal: 0.14.3

2005-08-08  Manuel M T Chakravarty  <chak@cse.unsw.edu.au>

	* c2hs.cabal: 0.14.2
	* Support asm construct (Duncon Coutts)
	* Hierachical modules  (Duncon Coutts)

2005-07-13  Duncan Coutts  <duncan.coutts@worc.ox.ac.uk>

	* Remove old C lexer & parser and replace them with new ones using
	alex and happy

2005-07-14  Manuel M. T. Chakravarty  <chak@cse.unsw.edu.au>

	* C2HS library as a single file added to the generated binding
	code

2005-07-13  Manuel M. T. Chakravarty  <chak@cse.unsw.edu.au>

	* Cabal-ised the build system
	* c2hs.cabal (Version): 0.14.0

2005-05-18  Manuel M. T. Chakravarty  <chak@cse.unsw.edu.au>

	* toplevel/Version.hs (versnum): 0.13.6

2005-03-14  Manuel M. T. Chakravarty  <chak@cse.unsw.edu.au>

	* c/CParser.hs: Allow lists of GNU C attributes (patch contributed
	by Duncan Coutts <duncan.coutts@worc.ox.ac.uk>)

	* chs/CHSLexer.hs (instr): Allow 8-bit characters (Volker Wysk
	<post@volker-wysk.de> requested support for umlauts in strings)

	* toplevel/Version.hs (versnum): 0.13.5

2004-10-18  Manuel M. T. Chakravarty  <chak@cse.unsw.edu.au>

	* chs/CHS.hs (showCHSModule): Don't add extra '\n' after directive
	during pretty printing
